@@ -1365,30 +1365,6 @@ static char *q3a_osp_gametypes[MAX_Q3A_OSP_TYPES] = {
   "Custom OSP",         /* 6+ is usually a custom OSP setting */
 };
 
-#define MAX_Q3A_ARENA_TYPES 9
-// Not sure what the proper types are, but 99% of them are a game
-// type of 8.  Just call them all "arena"
-static char *q3a_arena_gametypes[MAX_Q3A_ARENA_TYPES] = {
-  "arena",		/* 0 = Arena */
-  "arena",		/* 1 = Arena */
-  "arena",		/* 2 = Arena */
-  "arena",		/* 3 = Arena */
-  "arena",		/* 4 = Arena */
-  "arena",		/* 5 = Arena */
-  "arena",		/* 6 = Arena */
-  "arena",		/* 7 = Arena */
-  "arena",		/* 8 = Arena */
-};
-
-#define MAX_Q3A_CPMA_TYPES 6
-static char *q3a_cpma_gametypes[MAX_Q3A_CPMA_TYPES] = {
-  "FFA",		/* 0 = Free for All */
-  "1v1",	 	/* 1 = Tournament */
-  NULL,  		/* 2 = Single Player */
-  "TDM",		/* 3 = Team Deathmatch */
-  "CTF",		/* 4 = Capture the Flag */
-  "Clan Arena",		/* 5 = Clan Arena */
-};
 
 #define MAX_Q3A_UT2_TYPES 9
 static char *q3a_ut2_gametypes[MAX_Q3A_UT2_TYPES] = {
@@ -1462,6 +1438,41 @@ static char *q3a_afterwards_gametypes[MAX_Q3A_AFTERWARDS_TYPES] = {
   "Tactical",		// 0 = Tactical
   "FFA",		// 1 = Deatchmatch
   NULL,			// 2+ ??
+};
+
+#define MAX_Q3A_ARENA_TYPES 9
+// Not sure what the proper types are, but 99% of them are a game
+// type of 8.  Just call them all "arena"
+static char *q3a_arena_gametypes[MAX_Q3A_ARENA_TYPES] = {
+  "arena",		/* 0 = Arena */
+  "arena",		/* 1 = Arena */
+  "arena",		/* 2 = Arena */
+  "arena",		/* 3 = Arena */
+  "arena",		/* 4 = Arena */
+  "arena",		/* 5 = Arena */
+  "arena",		/* 6 = Arena */
+  "arena",		/* 7 = Arena */
+  "arena",		/* 8 = Arena */
+};
+
+#define MAX_Q3A_CPMA_TYPES 6
+static char *q3a_cpma_gametypes[MAX_Q3A_CPMA_TYPES] = {
+  "FFA",		/* 0 = Free for All */
+  "1v1",	 	/* 1 = Tournament */
+  NULL,  		/* 2 = Single Player */
+  "TDM",		/* 3 = Team Deathmatch */
+  "CTF",		/* 4 = Capture the Flag */
+  "Clan Arena",		/* 5 = Clan Arena */
+};
+
+#define MAX_Q3A_Q3F_TYPES 9
+static char *q3a_q3f_gametypes[MAX_Q3A_Q3F_TYPES] = {
+  "q3f",		/* 0 = Arena */
+  "q3f",		/* 1 = Arena */
+  "q3f",		/* 2 = Arena */
+  "q3f",		/* 3 = Arena */
+  "q3f",		/* 4 = Arena */
+  "q3f",		/* 5 = Arena */
 };
 
 #define MAX_WOLF_TYPES 9
@@ -1551,6 +1562,36 @@ struct q3a_gametype_s q3a_gametype_map[] =
     MAX_Q3A_ARENA_TYPES
   },
   {
+    "instaunlagged",
+    q3a_gametypes,
+    MAX_Q3A_TYPES
+  },
+  {
+    "instagibplus",
+    q3a_gametypes,
+    MAX_Q3A_TYPES
+  },
+  {
+    "beryllium",
+    q3a_gametypes,
+    MAX_Q3A_TYPES
+  },
+  {
+    "excessive",
+    q3a_gametypes,
+    MAX_Q3A_TYPES
+  },
+  {
+    "q3f",
+    q3a_q3f_gametypes,
+    MAX_Q3A_Q3F_TYPES
+  },
+  {
+    "q3f2",
+    q3a_q3f_gametypes,
+    MAX_Q3A_Q3F_TYPES
+  },
+  {
     NULL,
     NULL,
     0
@@ -1607,10 +1648,10 @@ void q3_decode_gametype (struct server *s, struct q3a_gametype_s map[])
       	s->gametype = ptr->gametypes[n];
 	found=1;
     }
-    else
+//    else
       // Exact match not found - use the first one in the list
       // which should be the game's original game types
-      s->gametype = map->gametypes[n];
+//      s->gametype = map->gametypes[n];
   }
 }
 
